[package]
name = "celeste"
version = "0.8.0"
edition = "2021"

[dependencies]
adw = { package = "libadwaita", version = "0.5.3", features = ["v1_2"] }
base64 = "0.21.5"
blocking = "1.5.1"
clap = { version = "4.4.8", features = ["derive", "env"] }
file-lock = "2.1.10"
futures = "0.3.29"
glib = "0.18.3"
glob = "0.3.1"
hw-msg = "0.4.1"
indexmap = "2.1.0"
ksni = "0.2.1"
lazy_static = "1.4.0"
librclone = { version = "0.6.3" }
nix = "0.27.1"
rand = "0.8.5"
regex = "1.10.2"
rocket = "0.5.0"
sea-orm = { version = "0.12.6", features = ["sqlx-sqlite", "runtime-async-std-rustls", "macros"] }
sea-orm-migration = "0.12.6"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tempfile = "3.8.1"
tera = "1.19.1"
time = { version = "0.3.30", features = ["serde-well-known"] }
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread", "sync"] }
toml_edit = { version = "0.21.0", features = ["serde"] }
tr = "0.1.7"
url = "2.4.1"

[build-dependencies]
grass = "0.13.1"
nipper = "0.1.9"